--- a/TidepoolToNightScoutSync.APP/appsettings.json
+++ b/TidepoolToNightScoutSync.APP/appsettings.json
@@ -14,10 +14,10 @@
       }
     ]
   },
-  "tidepool:Username": "tidepool@username.com",
-  "tidepool:Password": "password",
-  "nightscout:BaseUrl": "https://[name of app].herokuapp.com",
-  "nightscout:ApiKey": "nightscout secret with at least careportal role",
-  "sync:since": null,
+  "tidepool:Username": "tidepool@harperstokes.com",
+  "tidepool:Password": "Kls0807!",
+  "nightscout:BaseUrl": "https://hms71216.herokuapp.com",
+  "nightscout:ApiKey": "Katielynn1234",
+  "sync:since": "2020-07-01",
   "sync:till": null
 }
